--- a/index.html
+++ b/index.html
@@ -71,6 +71,193 @@
           </div>
         </section>
         <!-- Home Section End -->
+        <!-- About Section Start -->
+        <section class="about section padd-15">
+          <div class="container">
+            <div class="row">
+              <div class="section-title"><h2>About Me</h2></div>
+            </div>
+            <div class="row">
+              <div class="about-content padd-15">
+                <div class="row">
+                  <div class="about-text padd-15">
+                    <h3>
+                      I'm Aida Brugnone and
+                      <span>Junior Fullstack Web Developer</span>
+                    </h3>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Dignissimos perspiciatis in odit quos minus dolore fugit
+                      fuga deserunt nemo excepturi architecto delectus
+                      aspernatur reprehenderit magni expedita accusantium autem
+                      ab asperiores eos itaque repellat, ipsam dolor quod sequi.
+                      Fugit illum, adipisci veritatis voluptate nemo, laboriosam
+                      laudantium aliquid quis magnam facere, voluptatum ut aut
+                      quidem magni nisi!
+                    </p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="personal-info padd-15">
+                    <div class="row">
+                      <div class="info-item padd-15">
+                        <p>Birthday: <span>07 mar 1998</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Age: <span>24</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Website: <span>www.domain.com</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Email: <span>info@gmail.com</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Degree: <span>Tourism</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Phone: <span>+39 334 567 8900</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>City: <span>Sicily</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Remote: <span>Available</span></p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="buttons">
+                        <a href="#" class="btn">Download CV</a>
+                        <a href="#contact" class="btn hire-me">Hire Me</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="skills padd-15">
+                    <div class="row">
+                      <div class="skill-item padd-15">
+                        <h5>HTML</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 96%"></div>
+                          <div class="skill-percent">96%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
+                        <h5>CSS</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 76%"></div>
+                          <div class="skill-percent">76%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
+                        <h5>JS</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 66%"></div>
+                          <div class="skill-percent">66%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
+                        <h5>Bootstrap</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 56%"></div>
+                          <div class="skill-percent">56%</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="education padd-15">
+                    <h3 class="title">Education</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!-- Timeline item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>
+                              2012 -2017
+                            </h3>
+                            <h4 class="timeline-title">
+                              High School Diploma in Tourism
+                            </h4>
+                            <p class="timeline-text">
+                              Lorem ipsum dolor sit amet consectetur adipisicing
+                              elit. Totam quos, itaque quod sint iure maiores
+                              cumque illo dolor maxime, nesciunt quo repellat
+                              perferendis. Cum, maiores.
+                            </p>
+                          </div>
+                          <!-- Timeline item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>
+                              2012 -2017
+                            </h3>
+                            <h4 class="timeline-title">
+                              High School Diploma in Tourism
+                            </h4>
+                            <p class="timeline-text">
+                              Lorem ipsum dolor sit amet consectetur adipisicing
+                              elit. Totam quos, itaque quod sint iure maiores
+                              cumque illo dolor maxime, nesciunt quo repellat
+                              perferendis. Cum, maiores.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="experience padd-15">
+                    <h3 class="title">Experience</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!-- Timeline item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>
+                              2012 -2017
+                            </h3>
+                            <h4 class="timeline-title">
+                              High School Diploma in Tourism
+                            </h4>
+                            <p class="timeline-text">
+                              Lorem ipsum dolor sit amet consectetur adipisicing
+                              elit. Totam quos, itaque quod sint iure maiores
+                              cumque illo dolor maxime, nesciunt quo repellat
+                              perferendis. Cum, maiores.
+                            </p>
+                          </div>
+                          <!-- Timeline item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>
+                              2012 -2017
+                            </h3>
+                            <h4 class="timeline-title">
+                              High School Diploma in Tourism
+                            </h4>
+                            <p class="timeline-text">
+                              Lorem ipsum dolor sit amet consectetur adipisicing
+                              elit. Totam quos, itaque quod sint iure maiores
+                              cumque illo dolor maxime, nesciunt quo repellat
+                              perferendis. Cum, maiores.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- About Section End -->
       </div>
       <!-- Main Content End -->
     </div>
