--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Main Content Start -->
       <div class="main-content">
         <!-- Home Section Start -->
-        <section class="home section">
+        <section class="home section hidden">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -72,7 +72,7 @@
         </section>
         <!-- Home Section End -->
         <!-- About Section Start -->
-        <section class="about section padd-15">
+        <section class="about section padd-15 hidden">
           <div class="container">
             <div class="row">
               <div class="section-title"><h2>About Me</h2></div>
@@ -258,6 +258,101 @@
           </div>
         </section>
         <!-- About Section End -->
+        <!-- Services Section Start -->
+        <section class="service section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15"><h2>Services</h2></div>
+            </div>
+            <div class="row">
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-mobile-alt"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-laptop-code"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-palette"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-code"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+              <!-- Section item Start -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-bullhorn"></i>
+                  </div>
+                  <h4>Web design</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Blanditiis ratione quam ea?
+                  </p>
+                </div>
+              </div>
+              <!-- Section item End -->
+            </div>
+          </div>
+        </section>
+        <!-- Services Section End -->
       </div>
       <!-- Main Content End -->
     </div>
