feat: Add Portfolio's HTML&CSS Code and Project's preview images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Main Content Start -->
       <div class="main-content">
         <!-- Home Section Start -->
-        <section class="home section hidden">
+        <section class="home section">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -72,7 +72,7 @@
         </section>
         <!-- Home Section End -->
         <!-- About Section Start -->
-        <section class="about section padd-15 hidden">
+        <section class="about section padd-15">
           <div class="container">
             <div class="row">
               <div class="section-title"><h2>About Me</h2></div>
@@ -353,6 +353,58 @@
           </div>
         </section>
         <!-- Services Section End -->
+        <!-- Portfolio Section Start -->
+        <section class="portfolio section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15"><h2>Portfolio</h2></div>
+            </div>
+            <div class="row">
+              <div class="portfolio-heading padd-15">
+                <h2>My Last Projects :</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Portfolio item Start -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/trading-web-app-node-react.png"
+                      alt="Preview Trading Web App"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio item End -->
+              <!-- Portfolio item Start -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/crm-web-app.png"
+                      alt="Preview AM CRM Web App"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio item End -->
+              <!-- Portfolio item Start -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/finlab-consulting-js-project.png"
+                      alt="Preview Finlab Consulting Website"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio item End -->
+            </div>
+          </div>
+        </section>
+        <!-- Portfolio Section End -->
       </div>
       <!-- Main Content End -->
     </div>
