--- a/index.html
+++ b/index.html
@@ -405,6 +405,108 @@
           </div>
         </section>
         <!-- Portfolio Section End -->
+        <!-- Contact Section Start -->
+        <section class="contact section">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15"><h2>Contact Me</h2></div>
+            </div>
+            <h3 class="contact-title padd-15">Have you Any Questions?</h3>
+            <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICE</h4>
+            <div class="row">
+              <!-- Contact info item Start -->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-phone"></i></div>
+                <h4>Call Us On</h4>
+                <p>+39 345 678 9012</p>
+              </div>
+              <!-- Contact info item End -->
+              <!-- Contact info item Start -->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                <h4>Office</h4>
+                <p>Sicily, Italy</p>
+              </div>
+              <!-- Contact info item End -->
+              <!-- Contact info item Start -->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-envelope"></i></div>
+                <h4>Email</h4>
+                <p>info@gmail.com</p>
+              </div>
+              <!-- Contact info item End -->
+              <!-- Contact info item Start -->
+              <div class="contact-info-item padd-15">
+                <div class="icon"><i class="fa fa-globe-europe"></i></div>
+                <h4>Website</h4>
+                <p>www.domain.com</p>
+              </div>
+              <!-- Contact info item End -->
+            </div>
+            <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+            <h4 class="contact-sub-title padd-15">
+              I'M VERY RESPONSIVE TO MESSAGES
+            </h4>
+            <!-- Contact Form -->
+            <div class="row">
+              <div class="contact-form padd-15">
+                <div class="row">
+                  <!-- Form field Start -->
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                      />
+                    </div>
+                  </div>
+                  <!-- Form field End -->
+                  <!-- Form field Start -->
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                      />
+                    </div>
+                  </div>
+                  <!-- Form field End -->
+                  <!-- Form field Start -->
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Subject"
+                      />
+                    </div>
+                  </div>
+                  <!-- Form field End -->
+                  <!-- Form field Start -->
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <textarea
+                        name=""
+                        class="form-control"
+                        id=""
+                        placeholder="Message"
+                      ></textarea>
+                    </div>
+                  </div>
+                  <!-- Form field End -->
+                  <!-- Form field Start -->
+                  <div class="form-item col-12 padd-15">
+                    <button type="submit" class="btn">Send Message</button>
+                  </div>
+                  <!-- Form field End -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Contact Section End -->
       </div>
       <!-- Main Content End -->
     </div>
