feat: Add CSS Media Queries for Responsive Design

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         </section>
         <!-- Home Section End -->
         <!-- About Section Start -->
-        <section class="about section padd-15">
+        <section class="about section">
           <div class="container">
             <div class="row">
-              <div class="section-title"><h2>About Me</h2></div>
+              <div class="section-title padd-15"><h2>About Me</h2></div>
             </div>
             <div class="row">
               <div class="about-content padd-15">
@@ -126,7 +126,7 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div class="buttons">
+                      <div class="buttons padd-15">
                         <a href="#" class="btn">Download CV</a>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                       </div>
@@ -411,7 +411,7 @@
             <div class="row">
               <div class="section-title padd-15"><h2>Contact Me</h2></div>
             </div>
-            <h3 class="contact-title padd-15">Have you Any Questions?</h3>
+            <h3 class="contact-title padd-15">Have You Any Questions?</h3>
             <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICE</h4>
             <div class="row">
               <!-- Contact info item Start -->
