--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       href="css/skins/color-1.css"
       class="alternate-style"
       title="color-1"
-      disabled
     />
     <link
       rel="stylesheet"
@@ -64,19 +63,19 @@
         <!-- Hamburger Menu End-->
         <ul class="nav">
           <li>
-            <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
+            <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>About</a>
+            <a href="#about"><i class="fa fa-user"></i>About</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-list"></i>Services</a>
+            <a href="#services"><i class="fa fa-list"></i>Services</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i>Contact</a>
+            <a href="#contact"><i class="fa fa-comments"></i>Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +83,7 @@
       <!-- Main Content Start -->
       <div class="main-content">
         <!-- Home Section Start -->
-        <section class="home section">
+        <section class="home section" id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -108,7 +107,7 @@
         </section>
         <!-- Home Section End -->
         <!-- About Section Start -->
-        <section class="about section">
+        <section class="about section" id="about">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15"><h2>About Me</h2></div>
@@ -295,7 +294,7 @@
         </section>
         <!-- About Section End -->
         <!-- Services Section Start -->
-        <section class="service section">
+        <section class="service section" id="services">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15"><h2>Services</h2></div>
@@ -390,7 +389,7 @@
         </section>
         <!-- Services Section End -->
         <!-- Portfolio Section Start -->
-        <section class="portfolio section">
+        <section class="portfolio section" id="portfolio">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15"><h2>Portfolio</h2></div>
@@ -442,7 +441,7 @@
         </section>
         <!-- Portfolio Section End -->
         <!-- Contact Section Start -->
-        <section class="contact section">
+        <section class="contact section" id="contact">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15"><h2>Contact Me</h2></div>
@@ -552,7 +551,7 @@
       <div class="style-switcher-toggler s-icon">
         <i class="fas fa-cog fa-spin"></i>
       </div>
-      <div class="day-night s-icon"><i class="fas fa-moon"></i></div>
+      <div class="day-night s-icon"><i class="fas"></i></div>
       <h4>Theme Colors</h4>
       <div class="colors">
         <span class="color-1" onclick="setActiveStyle('color-1')"></span>
