--- a/index.html
+++ b/index.html
@@ -563,6 +563,10 @@
     </div>
     <!-- Style Switcher End -->
     <!-- JS Files -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
   </body>
