update: add some real texts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Aida - Jr Full-Stack Dev.</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -117,18 +117,19 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3>
-                      I'm Aida Brugnone and
+                      I'm Aida Brugnone and I'm a
                       <span>Junior Fullstack Web Developer</span>
                     </h3>
                     <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Dignissimos perspiciatis in odit quos minus dolore fugit
-                      fuga deserunt nemo excepturi architecto delectus
-                      aspernatur reprehenderit magni expedita accusantium autem
-                      ab asperiores eos itaque repellat, ipsam dolor quod sequi.
-                      Fugit illum, adipisci veritatis voluptate nemo, laboriosam
-                      laudantium aliquid quis magnam facere, voluptatum ut aut
-                      quidem magni nisi!
+                      I am a 24 year old girl, I live in Sicily. I have a High
+                      School Diploma in Tourism. My career began in the B2B
+                      sector: I organized and managed B2B meetings, I created
+                      and managed databases and CRM, I managed the company
+                      website. Since I started managing the company website, I
+                      have interfaced with the world of the web, which has
+                      intrigued me, and of which I am in love. So I decided to
+                      start studying in order to become a Fullstack Web
+                      Developer.
                     </p>
                   </div>
                 </div>
@@ -142,19 +143,39 @@
                         <p>Age: <span>24</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Website: <span>www.domain.com</span></p>
+                        <p>
+                          Website:
+                          <span
+                            ><a
+                              href="https://personal-portfolio-website-phi.vercel.app/"
+                              >Click here</a
+                            ></span
+                          >
+                        </p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Email: <span>info@gmail.com</span></p>
+                        <p>
+                          Email:
+                          <span
+                            ><a href="#send-me-email">Send me an email</a></span
+                          >
+                        </p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Degree: <span>Tourism</span></p>
+                        <p>Profession: <span>Jr Fullstack Web Dev.</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Phone: <span>+39 334 567 8900</span></p>
+                        <p>
+                          Github:
+                          <span
+                            ><a href="https://github.com/AidaB9837"
+                              >My Github's Profile</a
+                            ></span
+                          >
+                        </p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>City: <span>Sicily</span></p>
+                        <p>Where: <span>Sicily, Italy</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Remote: <span>Available</span></p>
@@ -169,34 +190,51 @@
                   </div>
                   <div class="skills padd-15">
                     <div class="row">
+                      <!-- Skill item Start -->
                       <div class="skill-item padd-15">
-                        <h5>HTML</h5>
+                        <h5>HTML & CSS</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 96%"></div>
                           <div class="skill-percent">96%</div>
                         </div>
                       </div>
+                      <!-- Skill item End -->
+                      <!-- Skill item Start -->
                       <div class="skill-item padd-15">
-                        <h5>CSS</h5>
+                        <h5>JS</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 76%"></div>
                           <div class="skill-percent">76%</div>
                         </div>
                       </div>
+                      <!-- Skill item End -->
+                      <!-- Skill item Start -->
                       <div class="skill-item padd-15">
-                        <h5>JS</h5>
+                        <h5>ReactJS</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 70%"></div>
+                          <div class="skill-percent">70%</div>
+                        </div>
+                      </div>
+                      <!-- Skill item End -->
+                      <!-- Skill item Start -->
+                      <div class="skill-item padd-15">
+                        <h5>Bootstrap & Tailwind</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 66%"></div>
                           <div class="skill-percent">66%</div>
                         </div>
                       </div>
+                      <!-- Skill item End -->
+                      <!-- Skill item Start -->
                       <div class="skill-item padd-15">
-                        <h5>Bootstrap</h5>
+                        <h5>NodeJS</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 56%"></div>
-                          <div class="skill-percent">56%</div>
+                          <div class="progress-in" style="width: 60%"></div>
+                          <div class="skill-percent">60%</div>
                         </div>
                       </div>
+                      <!-- Skill item End -->
                     </div>
                   </div>
                 </div>
@@ -211,16 +249,19 @@
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
                               <i class="fa fa-calendar"></i>
-                              2012 -2017
+                              2022 - 2022
                             </h3>
                             <h4 class="timeline-title">
-                              High School Diploma in Tourism
+                              Web Developer Training Course
                             </h4>
                             <p class="timeline-text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Totam quos, itaque quod sint iure maiores
-                              cumque illo dolor maxime, nesciunt quo repellat
-                              perferendis. Cum, maiores.
+                              during the course in Develhope School, I learned
+                              FullStack Development with HTML-CSS-Sass and
+                              Scss-Bootstrap-JavaScript languages and how to use
+                              Git and GitHub. In the second part, I deepened all
+                              the essential elements to develop software in
+                              ReactJs-NodeJS and I developed a real Team
+                              Application, with Agile methodologies.
                             </p>
                           </div>
                           <!-- Timeline item -->
@@ -228,7 +269,7 @@
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
                               <i class="fa fa-calendar"></i>
-                              2012 -2017
+                              2012 - 2017
                             </h3>
                             <h4 class="timeline-title">
                               High School Diploma in Tourism
@@ -254,16 +295,13 @@
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
                               <i class="fa fa-calendar"></i>
-                              2012 -2017
+                              2022 - 2022
                             </h3>
-                            <h4 class="timeline-title">
-                              High School Diploma in Tourism
-                            </h4>
+                            <h4 class="timeline-title">Junior Web Developer</h4>
                             <p class="timeline-text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Totam quos, itaque quod sint iure maiores
-                              cumque illo dolor maxime, nesciunt quo repellat
-                              perferendis. Cum, maiores.
+                              Practical experience in teams in the development
+                              of Websites and APPS through the use of
+                              HTML-CSS-JS-ReactJs-NodeJS in Agile mode
                             </p>
                           </div>
                           <!-- Timeline item -->
@@ -271,16 +309,27 @@
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
                               <i class="fa fa-calendar"></i>
-                              2012 -2017
+                              2022 - actually
                             </h3>
                             <h4 class="timeline-title">
-                              High School Diploma in Tourism
+                              Web & Marketing Manager
                             </h4>
                             <p class="timeline-text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Totam quos, itaque quod sint iure maiores
-                              cumque illo dolor maxime, nesciunt quo repellat
-                              perferendis. Cum, maiores.
+                              CRM and Website Management, Customer Support.
+                            </p>
+                          </div>
+                          <!-- Timeline item -->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i>
+                              2019 - 2022
+                            </h3>
+                            <h4 class="timeline-title">
+                              Web & Marketing Manager
+                            </h4>
+                            <p class="timeline-text">
+                              CRM Management, Organization of B2B meetings.
                             </p>
                           </div>
                         </div>
@@ -451,9 +500,13 @@
             <div class="row">
               <!-- Contact info item Start -->
               <div class="contact-info-item padd-15">
-                <div class="icon"><i class="fa fa-phone"></i></div>
-                <h4>Call Us On</h4>
-                <p>+39 345 678 9012</p>
+                <div class="icon"><i class="fa fa-people-group"></i></div>
+                <h4>Contact Me On</h4>
+                <p>
+                  <a href="https://www.linkedin.com/in/aida-brugnone"
+                    >LinkedIn</a
+                  >
+                </p>
               </div>
               <!-- Contact info item End -->
               <!-- Contact info item Start -->
@@ -467,18 +520,24 @@
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-envelope"></i></div>
                 <h4>Email</h4>
-                <p>info@gmail.com</p>
+                <p><a href="#send-me-email">Send me an email</a></p>
               </div>
               <!-- Contact info item End -->
               <!-- Contact info item Start -->
               <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-globe-europe"></i></div>
                 <h4>Website</h4>
-                <p>www.domain.com</p>
+                <p>
+                  <a href="https://personal-portfolio-website-phi.vercel.app/"
+                    >Click here</a
+                  >
+                </p>
               </div>
               <!-- Contact info item End -->
             </div>
-            <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+            <h3 class="contact-title padd-15" id="send-me-email">
+              SEND ME AN EMAIL
+            </h3>
             <h4 class="contact-sub-title padd-15">
               I'M VERY RESPONSIVE TO MESSAGES
             </h4>
