update: add some texts of the Services section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                               Web Developer Training Course
                             </h4>
                             <p class="timeline-text">
-                              during the course in Develhope School, I learned
+                              During the course in Develhope School, I learned
                               FullStack Development with HTML-CSS-Sass and
                               Scss-Bootstrap-JavaScript languages and how to use
                               Git and GitHub. In the second part, I deepened all
@@ -275,10 +275,12 @@
                               High School Diploma in Tourism
                             </h4>
                             <p class="timeline-text">
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Totam quos, itaque quod sint iure maiores
-                              cumque illo dolor maxime, nesciunt quo repellat
-                              perferendis. Cum, maiores.
+                              During my studies, I also learned specific
+                              subjects, such as English, French, Spanish,
+                              Business Administration, Tourism Law and
+                              Legislation, Computer Science and Tourism
+                              Geography. I have had experience as a Congress
+                              Hostess, Tour Operator and Tour Organizer.
                             </p>
                           </div>
                         </div>
@@ -301,7 +303,7 @@
                             <p class="timeline-text">
                               Practical experience in teams in the development
                               of Websites and APPS through the use of
-                              HTML-CSS-JS-ReactJs-NodeJS in Agile mode
+                              HTML-CSS-JS-ReactJs-NodeJS in Agile mode.
                             </p>
                           </div>
                           <!-- Timeline item -->
@@ -315,7 +317,8 @@
                               Web & Marketing Manager
                             </h4>
                             <p class="timeline-text">
-                              CRM and Website Management, Customer Support.
+                              CRM and Website Management; <br />Management and
+                              Customer Support.
                             </p>
                           </div>
                           <!-- Timeline item -->
@@ -326,10 +329,11 @@
                               2019 - 2022
                             </h3>
                             <h4 class="timeline-title">
-                              Web & Marketing Manager
+                              CRM & Marketing Manager
                             </h4>
                             <p class="timeline-text">
-                              CRM Management, Organization of B2B meetings.
+                              Business Broker; <br />CRM Management;
+                              <br />Organization of B2B meetings.
                             </p>
                           </div>
                         </div>
@@ -355,10 +359,10 @@
                   <div class="icon">
                     <i class="fa fa-mobile-alt"></i>
                   </div>
-                  <h4>Web design</h4>
+                  <h4>Responsive Web Design</h4>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Blanditiis ratione quam ea?
+                    I create responsive projects, to make sure the user has an
+                    optimal experience from any device.
                   </p>
                 </div>
               </div>
@@ -369,10 +373,10 @@
                   <div class="icon">
                     <i class="fa fa-laptop-code"></i>
                   </div>
-                  <h4>Web design</h4>
+                  <h4>Tailor-made projects</h4>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Blanditiis ratione quam ea?
+                    On request, I realize customized projects trying to meet
+                    every expectation
                   </p>
                 </div>
               </div>
@@ -383,10 +387,10 @@
                   <div class="icon">
                     <i class="fa fa-palette"></i>
                   </div>
-                  <h4>Web design</h4>
+                  <h4>Perfect Style</h4>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Blanditiis ratione quam ea?
+                    I like to create projects that have a beautiful style! But
+                    if you have an idea, let's talk about it!
                   </p>
                 </div>
               </div>
@@ -397,10 +401,10 @@
                   <div class="icon">
                     <i class="fa fa-code"></i>
                   </div>
-                  <h4>Web design</h4>
+                  <h4>Clean Code</h4>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Blanditiis ratione quam ea?
+                    I like to write clean and understandable code. I edit README
+                    files and use a lot of comments.
                   </p>
                 </div>
               </div>
